--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div
             id="root">
-            <script type="module" src="./App.js">
+            <script type="module" src="./src/components/App.js">
             </script>
         </div>
     </body>
